try to background fix on safari

--- a/css/style.scss
+++ b/css/style.scss
@@ -639,8 +639,8 @@ span.sub-title {
 }
 
 /* Turn off parallax scrolling for tablets and phones. Increase the pixels if needed */
-// @media only screen and (max-device-width: 1366px) {
-//     .parallax {
-//         background-attachment: scroll;
-//     }
-// }
+@media only screen and (max-width: 1024px) {
+    .parallax {
+        background-attachment: scroll;
+    }
+}
